# Lunar_Bot

./: README.md  SetupWizard.pyw  WizardUIs.py  appsettings.json  config.json  device.json  lagrange-0-log.db  lagrange-0.db  main.py  pyproject.toml  timing_message.ini  wiki.md
Tools/: Google_Gemini2.py  SearchOnline.py  deepseek.py  tools.py
UI/: JianerSetupAI.ui  JianerSetupAbout.ui  JianerSetupAdvanced.ui  JianerSetupApply.ui  JianerSetupBasic.ui  JianerSetupLgr.ui  JianerSetupOthers.ui  JianerSetupPluginWindow.ui  JianerSetupPlugins.ui  JianerSetupPre - 副本.ui  JianerSetupPre.ui  JianerSetupTTS.ui  JianerSetupTTS_ui.py  JianerSetupWizard.ui
prerequisites/: current.json  p2140264.txt  p8573480.txt
wizardTools/: GithubTools.py
wizardWindows/: Ui_JianerSetupAI.1.py  Ui_JianerSetupAI.py  Ui_JianerSetupAbout.py  Ui_JianerSetupAdvanced.py  Ui_JianerSetupApply.py  Ui_JianerSetupBasic.py  Ui_JianerSetupLgr.py  Ui_JianerSetupOthers.py  Ui_JianerSetupPluginWindow.py  Ui_JianerSetupPlugins.py  Ui_JianerSetupPre - old.py  Ui_JianerSetupPre.py  Ui_JianerSetupTTS.1.py  Ui_JianerSetupTTS.py  Ui_JianerSetupWizard old.py  Ui_JianerSetupWizard.py
